Fix dark mode button issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3449,14 +3449,15 @@ html[data-theme="dark"] #header > nav ul li a.active {
 #theme-toggle {
     position: fixed;
     bottom: 1rem;
-    right: 1rem;
+    left: 1rem;
     width: 44px;
     height: 44px;
     border-radius: 999px;
-    border: 1px solid var(--border);
+    border: 2px solid var(--border);
+	border-color: #1d1a1a !important;
     background: var(--surface) !important;
     cursor: pointer;
-    z-index: 9999;
+	z-index: 10003;
     display: grid;
     place-items: center;
     box-shadow: 0 8px 20px rgba(0,0,0,.25);
@@ -3464,8 +3465,11 @@ html[data-theme="dark"] #header > nav ul li a.active {
     margin: 0;
 }
 
+html[data-theme="dark"] #theme-toggle {
+	border-color: #aca9a9 !important;
+}
+
 .icon {
-    /* Reset positioning to ensure no lingering 'left/top' values apply */
     position: relative;
     top: auto;
     left: auto;
@@ -3482,6 +3486,7 @@ html[data-theme="dark"] #header > nav ul li a.active {
 
 .sun, .moon {
     position: absolute;
+	z-index: 10003;
     inset: 0;
     margin: auto;
     transition: transform .45s cubic-bezier(.4,0,.2,1),
